--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
+    "@prisma/client": "^6.4.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
