--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^6.4.1",
+    "framer-motion": "^12.4.7",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
